--- a/scripts/bdbox-xyz.in
+++ b/scripts/bdbox-xyz.in
@@ -89,7 +89,8 @@ function scan_directory ()
 	
 	local dirs=
 	if test -d $dir; then
-		dirs=$(ls $dir)
+#		dirs=$(ls $dir)
+		dirs=$(find $dir/* -type d)
 	fi
 
 	for d in $dirs; do
@@ -101,10 +102,12 @@ function scan_directory ()
 	xyzfiles=$(ls $dir | grep .xyz)
 	for f in $xyzfiles; do
 
+		mkdir -p $dir/moldat
+
 		xyz_mod=$(stat -c %Y $dir/$f)
 		echo "mols=$mols"
 		for imol in $mols; do
-			ofile=$dir/$(basename $f .xyz).mol$imol
+			ofile=$dir/moldat/$(basename $f .xyz).mol$imol
 			redo="yes"
 			if test -f $ofile.dat; then
 			 	dat_mod=$(stat -c %Y $ofile.dat)
@@ -113,19 +116,16 @@ function scan_directory ()
 				fi
 			fi
 
-			 if test "$redo" == "yes" -o "x$overwrite" == "xyes"; then
+			if test "$redo" == "yes" -o "x$overwrite" == "xyes"; then
 		 		echo "Extracting data from '$dir/$f' to $ofile.dat"
 				echo "$analysexyz $analysexyz_opt -f $dir/$f -k$imol"
 				echo "$analysexyz $analysexyz_opt -f $dir/$f -k$imol" > $ofile.cmd
 				$analysexyz $analysexyz_opt -f $dir/$f -k$imol > $ofile.dat
-			 else
-		 		echo "File '$ofile.dat' is up to date, skipping"
-			 fi	
-			if test -z "$files"; then
-				files=$ofile.dat
 			else
-				files="$files,$ofile.dat"
-			fi
+		 		echo "File '$ofile.dat' is up to date, skipping"
+			fi	
+			files="$files $ofile.dat"
+			nfiles=$[$nfiles+1]
 		done
 	done
 }
@@ -203,12 +203,22 @@ if test ! -d "$directory"; then
 	exit 1;
 fi
 
+nfiles=0
 cd $directory && scan_directory .
+
+files_file=`mktemp $myname-XXXXXX`
+if test -n "$files_file"; then
+    echo $files > $files_file
+    average_files=" -F $files_file"
+else
+    echo "$myname: cannot create a temporary file, sorry, I am giving up..."
+    exit 1
+fi
 
 echo
 echo "Avereging:"
-echo $average -f $files -k 0,5 $window
-$average -f $files -k 0,5 $window > $output
+echo $average $average_files -k 0,5 $window
+$average $average_files -k 0,5 $window > $output
 echo "Avereging done."
 
 if test "z$dofit" = "zyes"; then
@@ -224,6 +234,10 @@ if test "z$dofit" = "zyes"; then
 	D=`$fitter -f $output -x1 -y2 -l $fitps $fitinterval`
 	echo "$eta	$D"
 	echo "Fitting done."
+fi
+
+if test -f "$files_file"; then
+	rm $files_file
 fi
 
 exit 0;
